chore: enable test step

--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -48,7 +48,7 @@ jobs:
         run: deno cache npm:${{ matrix.vite-version }} --allow-scripts
 
       - name: Lint Source
-        run: deno lint --rules-exclude=no-explicit-any --ignore=node_modules **/*.ts
+        run: deno lint --ignore=node_modules **/*.ts
 
-    # - name: Run Tests
-    # run: deno run --allow-all --unstable-sloppy-imports npm:uvu tests
+      - name: Run Tests
+        run: deno run --allow-all npm:vitest run
