--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -60,6 +60,9 @@ jobs:
           pnpm install --frozen-lockfile --strict-peer-dependencies
           pnpm install ${{ matrix.vite-version }}
 
+      - name: Install Playwright browsers
+        run: pnpm exec playwright install
+
       - name: Lint Source
         run: pnpm run --if-present lint
 
