--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Jan T. Sott",
   "repository": {
     "type": "git",
-    "url": "https://github.com/idleberg/vite-plugin-bookmarklet"
+    "url": "git+https://github.com/idleberg/vite-plugin-bookmarklet.git"
   },
   "keywords": [
     "vite-plugin",
@@ -15,8 +15,8 @@
   "type": "module",
   "exports": {
     ".": {
-      "import": "./dist/plugin.js",
-      "types": "./dist/plugin.d.ts"
+      "types": "./dist/plugin.d.ts",
+      "import": "./dist/plugin.js"
     },
     "./client": {
       "types": "./client.d.ts"
