--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,5 @@
 auto-install-peers=true
 
 public-hoist-pattern[]=*@biomejs/biome*
-public-hoist-pattern[]=*lefthook
+public-hoist-pattern[]=*@total-typescript/tsconfig*
+public-hoist-pattern[]=*lefthook*
