--- a/.github/workflows/jsr.yml
+++ b/.github/workflows/jsr.yml
@@ -34,7 +34,7 @@ jobs:
           deno cache npm:vite \
             --allow-scripts \
             --no-lock \
-            --node-modules-dir auto
+            --node-modules-dir=auto
 
       - run: |
           deno lint \
