--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -61,7 +61,7 @@ jobs:
           pnpm install ${{ matrix.vite-version }}
 
       - name: Lint Source
-        run: pnpm run --if-present lint
+        run: pnpm exec biome ci
 
       - name: Build Source
         run: pnpm run --if-present build
