--- a/.github/workflows/bun.yml
+++ b/.github/workflows/bun.yml
@@ -50,7 +50,7 @@ jobs:
         run: bunx playwright install --with-deps
 
       - name: Lint Source
-        run: bun run --if-present lint
+        run: bunx biome ci
 
       - name: Build Source
         run: bun run --if-present build
